# pokerEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  input.txt  pyproject.toml  requirements.txt
.github/workflows/: cpp-build-and-test.yml  cpp-linter.yml  py-build-and-test.yml  py-linter.yml  python-linter.yml  python-test.yml
engine-src/: main.cpp
engine-src/cards/: Card.cpp
engine-src/game/: BettingRound.cpp  BettingRound.hpp  PokerGame.hpp
engine-src/players/: Player.hpp
game/: HandEvaluation.cpp
src/: main.cpp
src/cards/: Card.cpp  Card.h  Card.hpp  Deck.cpp  Deck.h  Deck.hpp
src/cppsrc/: main.cpp
src/cppsrc/cards/: Card.h
src/cppsrc/game/: HandEvaluator.h
src/game/: 7462.cpp  BettingRound.cpp  BettingRound.hpp  HandEvaluation.cpp  HandEvaluation.h  HandEvaluator.cpp  HandEvaluator.h  HandEvaluator.hpp  HandHashes.cpp  HandHashes.hpp  PokerGame.cpp  PokerGame.h  PokerGame.hpp
src/players/: Agent.cpp  Agent.hpp  Bot.cpp  Bot.hpp  Player.cpp  Player.h
src/pysrc/test/unit/: test_test.py
tests/: test_card.cpp  test_deck.cpp  test_hand_evaluator.cpp  test_player.cpp  test_pokergame.cpp
